config-root/namespaces/jx-production/aspnet-app-001/aspnet-app-001-aspnet-app-001-deploy.yaml
# Source: aspnet-app-001/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet-app-001-aspnet-app-001
  labels:
    draft: draft-app
    chart: "aspnet-app-001-0.0.17"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'aspnet-app-001'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: aspnet-app-001-aspnet-app-001
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: aspnet-app-001-aspnet-app-001
    spec:
      serviceAccountName: aspnet-app-001-aspnet-app-001
      containers:
      - name: aspnet-app-001
        image: "10.102.238.180/mysoftdevops/aspnet-app-001:0.0.17"
        imagePullPolicy: IfNotPresent
        envFrom: null
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 400m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
      - name: "tekton-container-registry-auth"
