config-root/namespaces/jx-production/aspnet-app-001/aspnet-app-001-svc.yaml
# Source: aspnet-app-001/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnet-app-001
  labels:
    chart: "aspnet-app-001-0.0.14"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'aspnet-app-001'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: aspnet-app-001-aspnet-app-001
